Issue 6195: Clean up files that don't get closed or aren't closed on exception